--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #f6f6f6;
+  font-family: "Work Sans", sans-serif;
+}
+
+.container {
+  @apply px-[30px] mx-auto;
+}
